--- a/my-app/styles/globals.css
+++ b/my-app/styles/globals.css
@@ -1,3 +1,11 @@
+@import url("https://fonts.googleapis.com/css2?family=Macondo&display=swap");
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.great-vibes-font {
+    font-family: "Macondo", serif;
+    font-weight: 400;
+    font-style: normal;
+}
